@@ -59,6 +59,9 @@ New in spot 2.7.4.dev (not yet released)
     {a:{[*i..j];b}}.  The formula::sugar_delay() function implement
     this SVA operator in terms of the existing PSL operators.
 
+  - spot::relabel_apply() make it easier to reverse the effect
+    of spot::relabel() or spot::relabel_bse() on formula.
+
 New in spot 2.7.4 (2019-04-27)
 
   Bugs fixed:
